# modal-async-pubsub-example

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: test.yaml
app/: _modal.py  _types.py  const.py  log.py  main.py  routers.py  subscriber.py
docs/: README.md  simple_async.py  simple_webhooks.py
scripts/: install.sh  run-uvicorn.sh
